finalproject/force-app/main/default/objects/Appointment__c/fields/Doctor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Doctor Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Doctor</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Appointments (Doctor Contact)</relationshipLabel>
    <relationshipName>Appointments1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>