finalproject/force-app/main/default/objects/Appointment__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>End Time of the Appointment</description>
    <formula>Start_Time__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>