finalproject/force-app/main/default/objects/Appointment__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Message explaining why an Appointment was cancelled</description>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>