finalproject/force-app/main/default/objects/Appointment__c/fields/Residence__c.field-meta.xml
<CustomField>
    <fullName>Residence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The location where this appointment is happening.</description>
    <label>Residence</label>
    <referenceTo>Residence__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>